# connectivity-sim

./: .gitignore  CMakeLists.txt  README.md  rebuild_and_run.sh
configs/: best_run.yaml  demo_confinement.yaml  demo_pulsed_barrier.yaml  demo_ring.yaml  demo_spread.yaml  demo_target_feedback.yaml  gpu_demo.yaml  tube_128x128x64.yaml  tube_3d.yaml  tube_3d_64.yaml  tube_64x64x512.yaml
include/aniso/gpu/: gpu_grid.cuh  kernels.cuh  math_utils.cuh  sim_params.h
scripts/: analyze_demo_sweep.py  mass_exchange_f32_experiment.py  plot_ctrl_v2.py  plot_gl_sweep.py  plot_gl_sweep_v2.py  plot_grad_sweep.py  plot_heating_hero.py  plot_heating_sweep.py  plot_pure_mc_sweep.py  plot_scale_invariance.py  plot_stoch_sweep.py  plot_sweep_v3.py
src/: gpu_main.cu  gpu_sweep_3d.cu  gpu_sweep_gl.cu  gpu_sweep_heating.cu
src/gpu/: gpu_grid.cu  kernels.cu
